Added legend to greenspaces dataset.

--- a/explore/index.html
+++ b/explore/index.html
@@ -433,7 +433,8 @@
                     about: 'Parks, playing fields, gardens and other green spaces that are likely to be publicly accessible in Trafford.<br /><br />Please also see our <a href="https://www.trafforddatalab.io/maps/greenspace/">enhanced version</a> of this map for more details.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/greenspaces/trafford_greenspace_sites.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/greenspaces" target="_blank">on GitHub</a>.',
                     attribution: 'Ordnance Survey',
                     url: 'https://www.trafforddatalab.io/open_data/greenspaces/trafford_greenspace_sites_styled.geojson',
-                    theme: 'Environment'
+                    theme: 'Environment',
+                    legend: '<div class="legendKey legendKeyLine" style="border-bottom: 3px solid #66c2a5;"></div> Allotments or Community Growing Space<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #fc8d62;"></div> Golf Course<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #8da0cb;"></div> Play Space<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #e78ac3;"></div> Playing Field<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #a6d854;"></div> Public Park or Garden<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #ffd92f;"></div> Religious Ground and Cemeteries<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #e5c494;"></div> Sports'
                 },
                 'hospitals': {
                     title: 'Hospitals',
