Amended agricultural land legend.

--- a/explore/index.html
+++ b/explore/index.html
@@ -324,7 +324,7 @@
                     attribution: 'Natural England',
                     url: 'https://www.trafforddatalab.io/open_data/agricultural_land_classification/trafford_agricultural_land_classification_styled.geojson',
                     theme: 'Environment',
-                    legend: '<div class="legendKey legendKeyLine" style="border-bottom: 3px solid #c7e9c0;"></div> Grade 1<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #a1d99b;"></div> Grade 2<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #74c476;"></div> Grade 3<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #31a354;"></div> Grade 4<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #006d2c;"></div> Grade 5<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #AE8552;"></div> Non Agricultural<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #828282;"></div> Urban'
+                    legend: '<div class="legendKey legendKeyLine" style="border-bottom: 3px solid #a1d99b;"></div> Grade 2<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #74c476;"></div> Grade 3<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #31a354;"></div> Grade 4<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #ae8552;"></div> Non Agricultural<br /><div class="legendKey legendKeyLine" style="border-bottom: 3px solid #828282;"></div> Urban'
                 },
                 'air_quality': {
                     title: 'Air quality',
