Improved the styling of the properties in the info panel - prevented whitespace wrapping of the variable names and added a dotted border to the bottom of the cells to improve readability.

--- a/explore/index.html
+++ b/explore/index.html
@@ -40,12 +40,14 @@
             .propertiesTable td
             {
                 vertical-align: top;
+                border-bottom: 1px dotted #ccc;
             }
 
             .propertiesTable td:nth-child(1)
             {
                 font-weight: bold;
                 width: 1%;
+                white-space: nowrap;
             }
 
             .datasetSelect
