Changed references to the isochrones library now that it has been deployed.

--- a/explore/index.html
+++ b/explore/index.html
@@ -15,9 +15,8 @@
         <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.css"/>
         <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/extended_markers/extended_markers_base.css"/>
         <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/extended_markers/extended_markers_mixed.css"/>
-
-        <link rel="stylesheet" href="../../assets/leaflet/isochrones_plugin/leaflet.isochrones.css"/>
-        <link rel="stylesheet" href="../../assets/leaflet/isochrones_plugin/leaflet.isochrones_lab.css"/>
+        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones.css"/>
+        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones_lab.css"/>
 
         <style>
             .aboutContainer
@@ -83,9 +82,8 @@
         <script src="https://www.trafforddatalab.io/assets/javascript/labSpinner.js"></script>
         <script src="https://www.trafforddatalab.io/assets/leaflet/labCreateTileLayer.js"></script>
         <script src="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.js"></script>
-
-        <script src="../../assets/leaflet/isochrones_plugin/leaflet.isochrones_lab_setup.js"></script>
-        <script src="../../assets/leaflet/isochrones_plugin/leaflet.isochrones.js"></script>
+        <script src="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones_lab_setup.js"></script>
+        <script src="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones.js"></script>
 
         <script>
             // ######### FUNCTIONS #########
