--- a/explore/index.html
+++ b/explore/index.html
@@ -15,8 +15,8 @@
         <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.css"/>
         <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/extended_markers/extended_markers_base.css"/>
         <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/extended_markers/extended_markers_mixed.css"/>
-        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones.css"/>
-        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones_lab.css"/>
+        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/leaflet.reachability/leaflet.reachability.css"/>
+        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/leaflet.reachability/leaflet.reachability_lab.css"/>
 
         <style>
             .aboutContainer
@@ -82,8 +82,8 @@
         <script src="https://www.trafforddatalab.io/assets/javascript/labSpinner.js"></script>
         <script src="https://www.trafforddatalab.io/assets/leaflet/labCreateTileLayer.js"></script>
         <script src="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.js"></script>
-        <script src="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones_lab_setup.js"></script>
-        <script src="https://www.trafforddatalab.io/assets/leaflet/isochrones_plugin/leaflet.isochrones.js"></script>
+        <script src="https://www.trafforddatalab.io/assets/leaflet/leaflet.reachability/leaflet.reachability_lab_setup.js"></script>
+        <script src="https://www.trafforddatalab.io/assets/leaflet/leaflet.reachability/leaflet.reachability.js"></script>
 
         <script>
             // ######### FUNCTIONS #########
@@ -174,9 +174,9 @@
                         labMap.datasetGeoJson.resetStyle(layer);
                     }
                     else {
-                        // The selected feature is either an isochrone or else we assume it to be a polygon from a geography boundary. The reset style method depends on what type of layer it is.
-                        if (isIsochroneLayer(layer)) {
-                            labMap.isoControl.isochronesGroup.resetStyle(layer);
+                        // The selected feature is either an isoline or else we assume it to be a polygon from a geography boundary. The reset style method depends on what type of layer it is.
+                        if (isIsolineLayer(layer)) {
+                            labMap.reachabilityControl.isolinesGroup.resetStyle(layer);
                         }
                         else {
                             // Easier to just set the style back to the default than resetting it via the L.geoJSON method
@@ -209,8 +209,8 @@
                     layer.setStyle(labMap.polySelected);
 
                     // Does the polygon layer belong to either a dataset or boundary geography? If so we want to bring that layer to the front
-                    // It's really important that we don't do this for isochrones otherwise the user couldn't select intervals
-                    if (isIsochroneLayer(layer) == false) layer.bringToFront();
+                    // It's really important that we don't do this for isolines otherwise the user couldn't select intervals
+                    if (isIsolineLayer(layer) == false) layer.bringToFront();
                 }
 
                 // build the content for the properties table to be displayed
@@ -332,15 +332,15 @@
                 labMap.datasetLayer.addTo(labMap.map);
             }
 
-            // Determines whether the layer provided is an isochrone
-            function isIsochroneLayer(layer) {
-                if (labMap.isoControl != null && labMap.isoControl.isochronesGroup != null) {
+            // Determines whether the layer provided is an isoline
+            function isIsolineLayer(layer) {
+                if (labMap.reachabilityControl != null && labMap.reachabilityControl.isolinesGroup != null) {
                     /*
-                        The following iteration is seemingly required as the expected code: labMap.isoControl.isochronesGroup.hasLayer(layer) doesn't work.
-                        Each isochrone or set of isochrones (if intervals were created) are added to .isochronesGroup as a L.geoJSON object, thus they are effectively sub groups of .isochronesGroup.
+                        The following iteration is seemingly required as the expected code: labMap.reachabilityControl.isolinesGroup.hasLayer(layer) doesn't work.
+                        Each isoline or set of isolines (if intervals were created) are added to .isolinesGroup as a L.geoJSON object, thus they are effectively sub groups of .isolinesGroup.
                         The loop iterates through each sub group and checks if the layer is present. If so we stop checking.
                     */
-                    var arrGroups = labMap.isoControl.isochronesGroup.getLayers();
+                    var arrGroups = labMap.reachabilityControl.isolinesGroup.getLayers();
                     for (var i = 0; i < arrGroups.length; i++) {
                         if (arrGroups[i].hasLayer(layer)) return true;
                     }
@@ -372,13 +372,13 @@
             });
 
             // Add the isochrones plugin
-            labMap.isoControl = labSetupIsochronesPlugin({
+            labMap.reachabilityControl = labSetupReachabilityPlugin({
                 // Common options are taken care of in the function, however the options below are extra
-                styleFn: labStyleIsochrones,
+                styleFn: labStyleIsolines,
                 clickFn: showLayerProps,
                 pane: 'pane_geography_overlay'
             });
-            labMap.isoControl.addTo(labMap.map);
+            labMap.reachabilityControl.addTo(labMap.map);
 
             labMap.baseLayers['Low detail'].addTo(labMap.map);   // Choose the base/tile layer for the map
 
@@ -421,23 +421,23 @@
                 labMap.updateInfo();    // clear and hide the info panel
             }));
 
-            labMap.map.on('isochrones:api_call_start', function (e) {
-                // example to listen for the start of the API call
+            labMap.map.on('reachability:api_call_start', function (e) {
+                // indicate to the user that something is happening at the start of the API call
                 startLabSpinner();
             });
 
-            labMap.map.on('isochrones:api_call_end', function (e) {
-                // example to listen for the end of the API call
+            labMap.map.on('reachability:api_call_end', function (e) {
+                // stop the spinner at the end of the API call
                 stopLabSpinner();
             });
 
-            labMap.map.on('isochrones:delete', function (e) {
-                // Check that the recently deleted isochrone wasn't currently selected
+            labMap.map.on('reachability:delete', function (e) {
+                // Check that the recently deleted isoline wasn't currently selected
                 if (labMap.featureCache != null) {
                     var layer = labMap.featureCache;
 
-                    if (isIsochroneLayer(layer) == false && isGeographyLayer(layer) == false && isDatasetLayer(layer) == false) {
-                        // The currently cached layer must've been an isochrone which has now been deleted so reset the info panel and cache
+                    if (isIsolineLayer(layer) == false && isGeographyLayer(layer) == false && isDatasetLayer(layer) == false) {
+                        // The currently cached layer must've been an isoline which has now been deleted so reset the info panel and cache
                         labMap.updateInfo();
                         labMap.featureCache = null;
                     }
